# src/main/java/com/example/student/model/Role.java
@@ -1,0 +1,9 @@
+package com.example.student.model;
+
+public enum Role {
+    USER,
+    ADMIN,
+    AGENT,
+    PROD
+}
+
